# bflang

./: CMakeLists.txt  LICENSE  README.md
.github/docker/: Dockerfile
.github/workflows/: ci.yaml
include/Conversion/: CMakeLists.txt  Passes.hh  Passes.td
include/IR/: BFDialect.hh  BFOps.hh  CMakeLists.txt  Dialect.td  Ops.td
include/Transforms/: CMakeLists.txt  Passes.hh  Passes.td
lib/Conversion/: BfToStandard.cc  CMakeLists.txt
lib/IR/: BFDialect.cc  CMakeLists.txt
lib/Transforms/: AttachDebugInfo.cc  CMakeLists.txt  LiftLoopStartEnd.cc  OptimizeLoadStore.cc  OptimizeUnmodifiedLoad.cc  PromoteDataPointer.cc  ValidateBF.cc
tests/: CMakeLists.txt  lit.cmake.cfg.py
tests/Conversion/: bf-to-standard.mlir
tests/Dialect/IR/: ir.mlir
tests/Transforms/: attach-debug-info.mlir  lift-loop-start-end.mlir  optimize-unmodified-load.mlir  promote-data-ptr.mlir  validate.mlir
tests/tools/driver/: emit-bf.bf  emit-llvm.bf  emit-mlir.bf  error.bf  execute.bf
tools/: CMakeLists.txt
tools/bf-opt/: CMakeLists.txt  bf-opt.cc
tools/driver/: CMakeLists.txt  driver.cc
